[package]
name = "toplogger-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["migration", "entity"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
anyhow = "1.0.82"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
dotenv = "0.15.0"
kdam = "0.5.1"
